# speak-to-llm

./: .env.example  .gitignore  Makefile  README.md  prompts.md
backend/: .env.example  .gitkeep  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/services/: llm_client.py  transcriber.py
backend/app/ws/: audio.py
backend/tests/: test_llm_client.py  test_smoke.py  test_transcriber.py  test_ws_audio.py
docs/plan/voice-llm-chat-20260310/: plan.yaml  research_findings_backend-audio-pipeline.yaml  research_findings_frontend-backend-think-tag-rendering-pipeline.yaml  research_findings_frontend-ui-architecture.yaml  research_findings_frontend_keyboard_interaction_and_speak_toggle_controls.yaml  research_findings_frontend_tests_and_validation_for_recording_ui.yaml  research_findings_frontend_waveform_visibility_and_recording_state.yaml  research_findings_integration-runtime-setup.yaml  research_findings_websocket-disconnect-bug.yaml  walkthrough-completion-20260310T142928Z.md  walkthrough-completion-20260312T231739Z.md  walkthrough-completion-20260313T123226Z.md  walkthrough-completion-20260313T142241Z.md  walkthrough-completion-20260313T1533Z.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.toggle.test.tsx  App.tsx
frontend/src/components/: BottomBar.test.tsx  BottomBar.tsx  ChatThread.tsx  MessageBubble.test.tsx  MessageBubble.tsx  MicButton.tsx  StatusOverlay.tsx  TopBar.tsx  WaveformBar.tsx
frontend/src/hooks/: useAudioStream.test.tsx  useAudioStream.ts  useWaveform.ts  (+1 more)
scripts/: dev.sh
(+7 files in other folders)
